# setup-tauri-vue

./: index.html  package.json  pnpm-lock.yaml
src/: App.vue  main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: backup.rs  cashier_report.rs  category.rs  debt.rs  mod.rs  print_order.rs  product.rs  report.rs  service.rs  stock.rs  supplier.rs  transaction.rs
src-tauri/src/db/: mod.rs
src/assets/: main.css
src/components/layout/: Header.vue  Sidebar.vue
src/components/pos/: Calculator.vue  CartItem.vue  PaymentPanel.vue  ProductGrid.vue  ReceiptModal.vue
src/components/report/: RevenueChart.vue  TopProductTable.vue
src/components/ui/: BadgeStatus.vue  BaseButton.vue  BaseInput.vue  BaseModal.vue  BasePagination.vue  BaseTable.vue  ToastContainer.vue
src/composables/: useBarcode.js  useExport.js  useKeyboardShortcut.js  useNotification.js  usePrint.js  useToast.js
src/router/: index.js
src/stores/: categoryStore.js  debtStore.js  posStore.js  printOrderStore.js  productStore.js  reportStore.js  serviceStore.js  settingStore.js  supplierStore.js  themeStore.js
src/views/: CashierReportView.vue  DashboardView.vue  DebtView.vue  PosView.vue  PrintView.vue  ProductView.vue  ReportView.vue  ServiceView.vue  SettingView.vue  StockView.vue  SupplierView.vue  TransactionView.vue
